--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,49 @@
-/*  your css code here. If applicable */
 body {
-  font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
- /* background-color: #f4f4f4;*/
+    background-color: #fbfbfb;
+    font-family: 'Muli', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
 }
 
 .container {
-  text-align: center;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-  margin-bottom: 10px;
-}
-
-p {
-  margin-bottom: 20px;
-  color: #666;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 1000px;
 }
 
 .code-container {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 0;
 }
 
 .code {
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  font-size: 24px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  outline: none;
+    border-radius: 5px;
+    font-size: 75px;
+    height: 120px;
+    width: 100px;
+    border: 1px solid #eee;
+    margin: 1%;
+    text-align: center;
+    font-weight: 300;
+    -moz-appearance: textfield; /* Remove arrows Chrome/Safari */
 }
 
-.code:focus {
-  border-color: #3498db;
+/* Chrome, Safari, Edge se arrows hatane ke liye */
+.code::-webkit-outer-spin-button,
+.code::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.code:valid {
+    border-color: #3498db;
+    box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.25);
 }
